Replace List.of with Collections.singletonList for roles